--- a/src/components/explain/home/index.css
+++ b/src/components/explain/home/index.css
@@ -5,13 +5,13 @@
     top: 0;
     left: 0;
     background: #f0f0f0;
-    padding-bottom: 1.09rem;
     box-sizing: border-box;
     overflow-y: scroll;
     font-size: 0.3rem;
-    background-color:#ffffff;
-    background-image:-webkit-linear-gradient(top,#ffffff,#f4f4f4);
-    background-image:linear-gradient(top,#ffffff,#f4f4f4);
+    background-color:#f4f4f4;
+    /* background-image:-webkit-linear-gradient(top,#ffffff,#f4f4f4);
+    background-image:linear-gradient(top,#ffffff,#f4f4f4); */
+    overflow-x: hidden;
 }
 .top{
     width: 100%;
@@ -62,7 +62,7 @@
     margin-bottom: 0.18rem;
 }
 .my_info{
-    margin-left: 0.2rem;
+    margin-left: 0.15rem;
     float: left;
     position: relative;
 }
@@ -78,6 +78,7 @@
     color: #ffac1c;
     font-weight: bold;
     height: 0.4rem;
+    margin-top: 0.06rem;
 }
 .money_icon{
     width: 0.30rem;
@@ -87,7 +88,7 @@
     margin-left: 0.1rem;
     display: inline-block;
     vertical-align: top;
-    margin-top: 0.08rem;
+   
 }
 .my_info_right{
     position: absolute;
@@ -123,14 +124,15 @@
 .banner_box{
     width: 100%;
     height: auto;
-    padding: 0.2rem 0.3rem 0rem 0.3rem;
-    box-sizing: border-box;
     border-top: 0.01rem solid #f0f0f0;
     overflow: hidden;
+    background: #ffffff;
 }
 .banner{
     width: 100%;
     height: 2.4rem;
+    padding: 0.2rem 0.3rem 0rem 0.3rem;
+    box-sizing: border-box;
 }
 .banner img{
     width: 100%;
@@ -142,17 +144,25 @@
     padding: 0.3rem 0.3rem 0.2rem 0.3rem;
     box-sizing: border-box;
     overflow-x: scroll;
+    background: #ffffff;
+}
+.activity_box::-webkit-scrollbar {
+    display: none
+}
+.activity_box::scrollbar {
+    display: none
 }
 .activity_box_main{
-    width: 100%;
+    width: 8rem;
     height: 100%;
     overflow: hidden;
+    background: #ffffff;
 }
 .activity_list{
     float: left;
     width: 1.18rem;
     text-align: center;
-    margin-right: 0.6rem;
+    margin-right: 0.48rem;
     position: relative;
 }
 .activity_list:last-of-type{
@@ -172,14 +182,17 @@
 .activity_entra_box{
     width: 100%;
     height: auto;
-    
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    background: #ffffff;
+    background-image:-webkit-linear-gradient(top,#ffffff,#f4f4f4);
+    background-image:linear-gradient(top,#ffffff,#f4f4f4);
 }
 .activity_entra{
     width: 100%;
     height: auto;
     padding: 0rem 0.3rem 0.1rem;
     box-sizing: border-box;
-    overflow: hidden;
 }
 .activity_entra img{
     width: 100%;
@@ -197,13 +210,13 @@
     font-weight: bold;
     color: #2b2b2b;
     position: relative;
-    text-indent: 0.2rem;
+    text-indent: 0.16rem;
 }
 .contain_top i{
     position: absolute;
     top: 0.1rem;
     left: 0;
-    width: 0.05rem;
+    width: 0.06rem;
     height: 0.3rem;
     background: #ff4532;
     display: inline-block;
@@ -211,24 +224,28 @@
 .contain_tab_box{
     width: 100%;
     height: auto;
-    padding: 0.3rem 0 0.3rem 0.3rem;
+    padding: 0.2rem 0 0.2rem 0.3rem;
     overflow-x: scroll;
     box-sizing: border-box;
 }
+.contain_tab_box::-webkit-scrollbar {
+    display: none
+}
+.contain_tab_box::scrollbar {
+    display: none
+}
 .contain_tab{
-    width: auto;
+    width: 8.4rem;
     height: 100%;
     overflow: hidden;
 }
 .contain_tab_list{
     width: 1.2rem;
-    height: 0.26rem;
     font-size: 0.26rem;
     text-align: center;
     padding: 0.12rem 0;
     color: #c1c1c1;
     font-weight: bold;
-    line-height: 0.26rem;
     display: inline-block;
     margin-right: 0.2rem;
     background: url("../../../../static/images/home/contain_tab.png") center no-repeat;
@@ -273,7 +290,7 @@
     font-weight: bold;
     color: #c1c1c1;
     position: absolute;
-    top: 0.03rem;
+    top: 0.08rem;
     right: 0.1rem;
 }
 .goods{
@@ -281,6 +298,14 @@
     height: 2.5rem;
     display: block;
     margin: 0 auto;
+    padding-top: 0.15rem;
+    box-sizing: border-box;
+}
+.goods img{
+    width: 1.38rem;
+    height: 2.12rem;
+    margin: 0 auto;
+    display: block;
 }
 .goods_name{
     font-size: 0.3rem;
@@ -297,22 +322,47 @@
 }
 .goods_now_price{
     font-size: 0.26rem;
-    text-indent: 0.2rem;
+    margin-left: 0.2rem;
     font-weight: bold;
     color: #ee4532;
+    position: relative;
 }
 .buy_btn{
     background: url("../../../../static/images/home/buy_btn.png") center no-repeat;
     background-size: contain;
     width: 1.28rem;
-    height: 0.44rem;
     position: absolute;
-    bottom: 0.15rem;
+    bottom: 0rem;
     right: 0.2rem;
     font-size: 0.24rem;
     color: #ffffff;
     text-align: center;
     padding: 0.1rem 0;
     box-sizing: border-box;
-    line-height: 0.24rem;
+}
+.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
+    bottom: 0px !important;
+}
+.swiper-container1>>>.swiper-pagination-bullet-active {
+    opacity: 1;
+    background: #ffffff;
+}
+.swiper-container2{
+    overflow: visible;
+}
+.swiper-container2>>>.swiper-pagination-bullets {
+    opacity: 1;
+    bottom: -4px !important;
+}
+.swiper-container2>>>.swiper-pagination-bullet {
+    width: 0.24rem;
+    height: 0.08rem;
+    background: #000;
+    border-radius: 0.1rem;
+}
+.swiper-container2>>>.swiper-pagination-bullet-active {
+    width: 0.24rem;
+    height: 0.08rem;
+    border-radius: 0.1rem;
+    background: #ff4532;
 }
