--- a/src/components/explain/home/index.css
+++ b/src/components/explain/home/index.css
@@ -77,7 +77,8 @@
     background-size: contain;
     margin-left: 0.1rem;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
+    margin-top: -0.1rem;
    
 }
 .my_info_right{
