--- a/src/components/explain/signIn/index.css
+++ b/src/components/explain/signIn/index.css
@@ -72,7 +72,8 @@
     background-size: contain;
     margin-left: 0.1rem;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
+    margin-top: -0.1rem;
    
 }
 .my_info_right{
