--- a/src/components/explain/integralRecord/index.css
+++ b/src/components/explain/integralRecord/index.css
@@ -94,7 +94,7 @@
     top: 0.33rem;
 }
 .list_box{
-    width:  rem;
+    width: 6.9rem;
     height: auto;
     margin:0.2rem auto;
     background:#ffffff;
