--- a/src/components/explain/orderDetail/index.css
+++ b/src/components/explain/orderDetail/index.css
@@ -248,3 +248,62 @@
     color: #ffac1c;
     font-weight: bold;
 }
+.btn{
+    width: 5.8rem;
+    margin: 0.4rem auto;
+    background: #ff4532;
+    font-size: 0.32rem;
+    text-align: center;
+    color: #ffffff;
+    border-radius: 0.6rem;
+    padding: 0.34rem 0;
+}
+.slideParty{
+    width: 1.1rem;
+    height: 1.1rem;
+    position: fixed;
+    bottom: 2rem;
+    right: 0.23rem;
+    background: url("../../../../static/images/orderDeatil/slideParty.png") center no-repeat;
+    background-size: contain;
+    z-index: 10;
+}
+.slidePartyBox{
+    width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.slidePartyBg{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.slideContent{
+   position: absolute;
+   top: 6rem;
+   right: 0.3rem;
+}
+.slideList{
+    height: 0.96rem;
+    margin-bottom: 0.5rem;
+    overflow: hidden;
+    font-size: 0.3rem;
+    color: #ffffff;
+    vertical-align: middle;
+    line-height: 0.96rem;
+    text-align: right;
+}
+.slideList img{
+    width: 0.96rem;
+    height: 0.96rem;
+    display: inline-block;
+    margin-left: 0.2rem;
+    float: right;
+}
