--- a/src/components/explain/signIn/index.css
+++ b/src/components/explain/signIn/index.css
@@ -19,12 +19,12 @@
     background: #ffffff;
 }
 .top_close{
-    width: 0.26rem;
+    width: 0.16rem;
     height: 0.28rem;
     background: url("../../../../static/images/home/top_close.png") center no-repeat;
     background-size: contain;
     position: absolute;
-    top: 0.4rem;
+    top: 0.45rem;
     left: 0.3rem;
     display: block;
 }
@@ -32,7 +32,7 @@
     width: 100%;
     height: auto;
     padding: 0 0.3rem;
-    border-top: 0.01rem solid #f1f1f1;
+    border-top: 1px solid #f1f1f1;
     background: #ffffff;
     position: relative;
     overflow: hidden;
@@ -45,6 +45,17 @@
     float: left;
     margin-top: 0.18rem;
     margin-bottom: 0.18rem;
+    background: url("../../../../static/images/home/my_img_bg.png") center no-repeat;
+    background-size: contain;
+    position: relative;
+}
+.my_img img{
+    border-radius: 50%;
+    overflow: hidden;
+    width: 0.62rem;
+    height: 0.62rem;
+    margin:0.02rem auto;
+    display: block;
 }
 .my_info{
     margin-left: 0.15rem;
@@ -266,7 +277,7 @@
 ul li{
     width: 100%;
     height: 1.21rem;
-    border-bottom: 0.01rem solid #f1f1f1;
+    border-bottom: 1px solid #f1f1f1;
     overflow: hidden;
     position: relative;
 }
