--- a/src/components/explain/taskWall/index.css
+++ b/src/components/explain/taskWall/index.css
@@ -16,7 +16,7 @@
     background: #ffffff;
 }
 .top_close{
-    width: 0.26rem;
+    width: 0.16rem;
     height: 0.28rem;
     background: url("../../../../static/images/home/top_close.png") center no-repeat;
     background-size: contain;
@@ -61,11 +61,11 @@
     margin-top:-0.1rem;
 }
 .money_icon{
-    width: 0.30rem;
+    width: 0.4rem;
     height: 0.32rem;
     background: url("../../../../static/images/home/integral.png") center no-repeat;
     background-size: contain;
-    margin-left: 0.1rem;
+    margin-left: 0.05rem;
     display: inline-block;
     vertical-align: middle;
     margin-top: -0.1rem;
@@ -164,7 +164,7 @@
 }
 .list{
     width: 100%;
-    border-bottom: 0.01rem solid #f1f1f1;
+    border-bottom: 1px solid #f1f1f1;
     margin-top: 0.2rem;
     overflow: hidden;
     position: relative;
@@ -208,7 +208,7 @@
     margin-top: 0.1rem;
 }
 .task_money i{
-    width: 0.30rem;
+    width: 0.4rem;
     height: 0.32rem;
     background: url("../../../../static/images/home/integral.png") center no-repeat;
     background-size: contain;
