--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -26,7 +26,8 @@ body {
     /* line-height:1; */
     -webkit-overflow-scrolling: touch;
 	overflow-scrolling: touch;
-	overflow-y: scroll;
+    overflow-y: scroll;
+    font-family: Arial, Helvetica, sans-serif;
 }
 :focus {
 	outline: 1;
