--- a/src/components/explain/luckDraw/index.css
+++ b/src/components/explain/luckDraw/index.css
@@ -271,4 +271,183 @@
     height: 1rem;
     background: url("../../../../static/images/luckDraw/footer.png") center no-repeat;
     background-size: contain;
+    position: relative;
+}
+.go_link{
+    position: absolute;
+    bottom: 0.17rem;
+    left: 2.9rem;
+    width: 3.4rem;
+    height: 0.3rem;
+}
+.play_active{
+    width: 1.82rem;
+    height: 1.79rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.mask{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.mask .mask_main{
+    width: 5.72rem;
+    height: 6.29rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -2.86rem;
+    margin-top: -3.195rem;
+}
+.mask .mask_main .box{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.prize_things{
+    width: 5.72rem;
+    height: 6.29rem;
+    background: url("../../../../static/images/luckDraw/prize_things.png") center no-repeat;
+    background-size: contain;
+    padding-top: 0.13rem;
+    box-sizing: border-box;
+}
+.light{
+    width: 6.41rem;
+    height: 6.55rem;
+    background: url("../../../../static/images/luckDraw/light.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: -1.3rem;
+    left: 50%;
+    margin-left: -3.205rem;
+}
+.mask_title{
+    font-size: 0.36rem;
+    color: #e43b24;
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+}
+.mask_prize_name{
+    font-size: 0.28rem;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 0.5rem;
+}
+.prize_things_box{
+    width: 4.48rem;
+    height: 3.23rem;
+    margin: 0.1rem auto;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+.prize_coupon_bg{
+    width: 4.2rem;
+    height: 2.93rem;
+    background: url("../../../../static/images/luckDraw/prize_coupon_bg.png") center no-repeat;
+    background-size: contain;
+    margin: 0.18rem auto 0;
+    overflow: hidden;
+}
+.prize_coupon_num{
+    font-size: 0.28rem;
+    color: #ff4532;
+    font-weight: bold;
+    float: left;
+    margin-left: 0.22rem;
+    margin-top: 0.4rem;
+    width: 1.37rem;
+    text-align: center;
+}
+.prize_coupon_num span{
+    font-size: 0.58rem;
+    
+}
+.prize_coupon_info{
+    float: left;
+    color: #505050;
+    margin-left: 0.3rem;
+}
+.prize_coupon_use{
+    font-size: 0.24rem;
+    font-weight: bold;
+    margin-top: 0.3rem;
+}
+.prize_coupon_use_time{
+    font-size: 0.18rem;
+    font-weight: bold;
+    margin-top: 0.1rem;
+}
+.mask_btn{
+    width: 3.26rem;
+    height: 1.06rem;
+    background: url("../../../../static/images/luckDraw/mask_btn.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    bottom: 0.13rem;
+    left: 50%;
+    margin-left: -1.63rem;
+    font-size: 0.28rem;
+    color: #ba2807;
+    text-align: center;
+    padding: 0.26rem 0;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+.mask_close{
+    width: 0.6rem;
+    height: 0.6rem;
+    background: url("../../../../static/images/luckDraw/mask_close.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: -0.2rem;
+    right: -0.2rem;
+}
+.mask_integral{
+    width: 3.41rem;
+    height: 1.93rem;
+    display: block;
+    margin: 0.5rem auto 0;
+}
+.prize_coupon_num{
+    font-size: 0.28rem;
+    color: #ffffff;
+    margin-top: 0.2rem;
+    text-align: center;
+    width: 100%;
+}
+.prize_redpackets{
+    width: 5.72rem;
+    height: 6.29rem;
+    background: url("../../../../static/images/luckDraw/prize_redpackets.png") center no-repeat;
+    background-size: contain;
+    padding-top: 0.13rem;
+    box-sizing: border-box;
+}
+.prize_redpackets_num{
+    font-size: 0.28rem;
+    color: #ffffff;
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+    margin-top: 2.3rem;
+}
+.prize_redpackets_num span{
+    font-size: 0.58rem;
+}
+.no_prize{
+    width: 1.9rem;
+    height: 2.26rem;
+    background: url("../../../../static/images/luckDraw/no_prize.png") center no-repeat;
+    background-size: contain;
+    display: block;
+    margin: 0.5rem auto 0;
 }
