--- a/src/components/explain/luckDraw/index.css
+++ b/src/components/explain/luckDraw/index.css
@@ -1,9 +1,13 @@
 .main{
     width: 100%;
-    height:100%;
+    
     position: absolute;
     top: 0;
     left: 0;
+}
+.header_part{
+    width: 100%;
+    height: 2.12rem;
 }
 .top{
     width: 100%;
@@ -129,9 +133,10 @@
     width: 100%;
     height:11.24rem;
     background: #ff4e4e url("../../../../static/images/luckDraw/bg.png") top center no-repeat;
-    background-size: 7.5rem 11.24rem;
+    background-size: 100% 100%;
     padding-top: 0.15rem;
     box-sizing: border-box;
+    flex:1;
 }
 .content_title{
     font-size: 0.8rem;
@@ -194,6 +199,7 @@
     height: 5.9rem;
     margin: 0 0.39rem;
     overflow: hidden;
+    position: relative;
 }
 .luck_draw_box ul li{
     width: 1.82rem;
@@ -265,15 +271,54 @@
     font-size: 0.22rem;
     color: #ffe0b4;
     text-align: center;
+    margin-bottom: 0.1rem;
 }
 
 .play_active{
-    width: 1.82rem;
+    width: 1.85rem;
     height: 1.79rem;
+}
+.play_active_0{
     position: absolute;
-    top: 0;
+    top: 0.09rem;
     left: 0;
 }
+.play_active_1{
+    position: absolute;
+    top: 0.09rem;
+    left: 1.975rem;
+}
+.play_active_2{
+    position: absolute;
+    top: 0.09rem;
+    left: 3.95rem;
+}
+.play_active_3{
+    position: absolute;
+    top: 2.03rem;
+    left: 3.95rem;
+}
+.play_active_4{
+    position: absolute;
+    top: 3.965rem;
+    left: 3.95rem;
+}
+.play_active_5{
+    position: absolute;
+    top: 3.965rem;
+    left: 1.975rem;
+}
+.play_active_6{
+    position: absolute;
+    top: 3.965rem;
+    left: 0;
+}
+.play_active_7{
+    position: absolute;
+    top: 2.03rem;
+    left: 0;
+}
+
 .mask{
 	width: 100%;
 	height: 100%;
@@ -404,7 +449,7 @@
     display: block;
     margin: 0.5rem auto 0;
 }
-.prize_coupon_num{
+.prize_integral_num{
     font-size: 0.28rem;
     color: #ffffff;
     margin-top: 0.2rem;
@@ -437,4 +482,8 @@
     background-size: contain;
     display: block;
     margin: 0.5rem auto 0;
+}
+.anim {
+    transition: all 0.5s linear;
+    margin-top: -0.34rem;
 }
