--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -109,6 +109,18 @@ input, select {
 ul,li{
     list-style: none;
 }
+.main{
+    min-height:100vh;
+    display:flex;
+    flex-direction: column;
+}
+.content{
+    flex:1;
+}
+.header_part{
+    width: 100%;
+    height: 2.12rem;
+}
 /* 需要给弹窗设置为弹出的样式，进行了添加tanchuscale */
 /* 控制弹出窗的动画，开始缩放为0，一直慢慢放大 */
 @keyframes tanchuscale{
