--- a/src/components/explain/luckDraw/index.css
+++ b/src/components/explain/luckDraw/index.css
@@ -265,6 +265,7 @@
     font-size: 0.22rem;
     color: #ffe0b4;
     text-align: center;
+    letter-spacing: 0.03rem;
 }
 .bottom{
     width: 100%;
