--- a/src/components/explain/taskWall/index.css
+++ b/src/components/explain/taskWall/index.css
@@ -27,7 +27,7 @@
 }
 .header_bg{
     width: 100%;
-    height: 5.71rem;
+    height: 5.41rem;
     background: url("../../../../static/images/taskWall/header.png") center no-repeat;
     background-size: contain;
 }
@@ -37,15 +37,15 @@
     position: absolute;
     top: 1.08rem;
     left: 0;
-    padding: 0 0.3rem;
     box-sizing: border-box;
 }
 .header{
     width: 100%;
-    height: auto;
+    height: 1.3rem;
+    padding: 0.2rem 0rem 0 0.3rem;
     position: relative;
     overflow: hidden;
-    padding-top: 0.2rem;
+    box-sizing: border-box;
 }
 .my_integral{
     font-size: 0.26rem;
@@ -72,63 +72,35 @@
    
 }
 .integral_record{
-    width: 1.41rem;
-    height: 0.31rem;
+    width: 0.66rem;
+    height: 0.98rem;
     position: absolute;
-    top: 0.2rem;
-    right: 0rem;
+    top: 0.3rem;
+    right: 1rem;
     background: url("../../../../static/images/taskWall/integral_record_icon.png") center no-repeat;
     background-size: contain;
 }
+.integral_record_intru{
+    width: 0.66rem;
+    height: 0.98rem;
+    position: absolute;
+    top: 0.3rem;
+    right: 0.3rem;
+    background: url("../../../../static/images/taskWall/integral_record_intru.png") center no-repeat;
+    background-size: contain;
+}
 .exchage_integral{
-    width: 1.8rem;
-    height: 0.56rem;
+    width: 1.44rem;
+    height: 0.28rem;
     display: inline-block;
     background: url("../../../../static/images/taskWall/exchage_integral.png") center no-repeat;
     background-size: contain;
-    margin-left: 0.2rem;
+    margin-left: 0.1rem;
+    vertical-align: top;
+    margin-top: 0.13rem;
 }
-.banner_box{
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-.banner{
-    width: 100%;
-    height: 2.4rem;
-    margin-top: 0.2rem;
-    box-sizing: border-box;
-}
-.banner img{
-    width: 100%;
-    height: 100%;
-}
-.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
-    bottom: -5px !important;
-}
-.swiper-container1>>>.swiper-pagination-bullet-active {
-    opacity: 1;
-    background: #ffffff;
-}
-.swiper-container2{
-    overflow: visible;
-}
-.swiper-container2>>>.swiper-pagination-bullets {
-    opacity: 1;
-    bottom: -4px !important;
-}
-.swiper-container2>>>.swiper-pagination-bullet {
-    width: 0.24rem;
-    height: 0.08rem;
-    background: #000;
-    border-radius: 0.1rem;
-}
-.swiper-container2>>>.swiper-pagination-bullet-active {
-    width: 0.24rem;
-    height: 0.08rem;
-    border-radius: 0.1rem;
-    background: #ff4532;
-}
+
+
 .task_list_box{
     width: 100%;
     height: auto;
@@ -143,29 +115,36 @@
     margin-bottom: 0.2rem;
 }
 .task_list_top{
-    font-size: 0.36rem;
-    font-weight: bold;
-    color: #2b2b2b;
+    width: 100%;
+    height: 1rem;
     position: relative;
 }
-.task_list_top span{
-    font-size: 0.2rem;
-    color: #8e8e8e;
-    margin-left: 0.1rem;
+.every_task_icon{
+    width: 2.22rem;
+    height: 0.82rem;
+    position: absolute;
+    left: -0.1rem;
+    top: 0.3rem;
 }
 .refresh{
     width: 0.85rem;
     height: 0.28rem;
     position: absolute;
-    top: 0rem;
-    right: 0rem;
+    top: 0.5rem;
+    right: 0.29rem;
     background: url("../../../../static/images/taskWall/refresh.png") center no-repeat;
     background-size: contain;
 }
+.task_content_list{
+    width: 100%;
+    height: auto;
+    padding-left: 0.28rem;
+    box-sizing: border-box;
+}
 .list{
     width: 100%;
+    padding: 0.2rem 0;
     border-bottom: 1px solid #f1f1f1;
-    margin-top: 0.2rem;
     overflow: hidden;
     position: relative;
 }
@@ -175,16 +154,14 @@
 .task_img_bg{
     width: 1.2rem;
     height: 1.2rem;
-    background: url("../../../../static/images/taskWall/task_img_bg.png") center no-repeat;
     background-size: contain;
-    margin: 0.2rem 0.2rem 0.2rem 0;
-    padding-top: 0.15rem;
     box-sizing: border-box;
     float: left;
+    margin-right: 0.2rem;
 }
 .task_img_bg img{
-    width:0.9rem;
-    height: 0.9rem;
+    width:100%;
+    height: 100%;
     display: block;
     margin: 0 auto;
 }
@@ -194,12 +171,11 @@
 .task_type_title{
     font-size: 0.28rem;
     color: #2b2b2b;
-    margin-top:0.15rem;
 }
 .task_type_intr{
     font-size: 0.24rem;
     color: #8e8e8e;
-    margin-top: 0.11rem;
+    margin-top: 0.05rem;
 }
 .task_money{
     font-size: 0.28rem;
@@ -221,7 +197,7 @@
     width: 1.5rem;
     position: absolute;
     top: 0.48rem;
-    right: 0rem;
+    right: 0.3rem;
     font-size: 0.24rem;
     padding: 0.16rem 0;
     color: #ffffff;
@@ -246,7 +222,7 @@
     width: 1.5rem;
     text-align: center;
     position: absolute;
-    right: 0;
+    right: 0.3rem;
     bottom: 0.18rem;
     color: #8e8e8e;
 }
@@ -254,24 +230,58 @@
     color: #ff4532;
 }
 .task_tab_box{
-    width: 5.14rem;
-    height: 0.56rem;
-    margin: 0.2rem auto;
-    background: url("../../../../static/images/taskWall/task_tab_bg.png") center no-repeat;
-    background-size: contain;
-    overflow: hidden;
+   width: 6.9rem;
+   height: 0.9rem;
+   margin: 0.2rem auto 0;
+   overflow: hidden;
 }
 .task_tab_box div{
-    width: 25%;
+    width: 3.4rem;
+    height: 100%;
+    box-sizing: border-box;
     float: left;
-    font-size: 0.28rem;
-    color: #8e8e8e;
+    font-size: 0.36rem;
+    color: #2b2b2b;
     text-align: center;
-    padding: 0.13rem 0;
+    font-weight: bold;
+    padding: 0.2rem 0;
+    margin-right: 0.1rem;
+    background: #ffffff;
+    border-top-left-radius: 0.15rem;
+    border-top-right-radius: 0.15rem;
+}
+.task_tab_box div:nth-of-type(2n){
+    margin-right: 0;
 }
 .task_tab_box div.active{
     font-weight: bold;
-    color: #ff4532;
+    color: #ffffff;
+    background: #ff4532;
+}
+.task_tab_box div i{
+    width: 0.3rem;
+    height: 0.36rem;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 0.1rem;
+}
+.task_icon{
+    background: url("../../../../static/images/taskWall/task_icon.png") center no-repeat;
+    background-size: contain;
+}
+.task_icon_active{
+    background: url("../../../../static/images/taskWall/task_icon_active.png") center no-repeat;
+    background-size: contain;
+}
+.task_tab_box div .task_store_icon{
+    width: 0.38rem;
+    background: url("../../../../static/images/taskWall/task_store_icon.png") center no-repeat;
+    background-size: contain;
+}
+.task_tab_box div .task_store_icon_active{
+    width: 0.38rem;
+    background: url("../../../../static/images/taskWall/task_store_icon_active.png") center no-repeat;
+    background-size: contain;
 }
 .footer{
     width: 100%;
@@ -358,4 +368,131 @@
 .news img{
     width: 100%;
     height: 100%;
+}
+
+.activity_box{
+    width: 6.9rem;
+    height: 2rem;
+    margin: 2.5rem auto 0rem;
+    overflow: hidden;
+    border-radius: 0.2rem;
+    box-shadow: 0rem 0.1rem 0.2rem #cccccc;
+}
+.activity_scoll{
+    width: 100%;
+    height: 2rem;
+    padding: 0.3rem 0.3rem 0.2rem 0.3rem;
+    box-sizing: border-box;
+    overflow-x: scroll;
+    background: #ffffff;
+    -webkit-overflow-scrolling: touch;
+    display: -webkit-box;
+    display: box;
+    
+}
+.activity_scoll::-webkit-scrollbar {
+    display: none;
+    
+}
+.activity_scoll::scrollbar {
+    display: none
+}
+.activity_box_main{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: #ffffff;
+}
+.activity_list{
+    float: left;
+    width: 1.18rem;
+    text-align: center;
+    margin-right: 0.48rem;
+    position: relative;
+}
+.activity_hot{
+    width: 0.65rem;
+    height: 0.32rem;
+    background: url("../../../../static/images/taskWall/activity_hot.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0rem;
+    right: -0.18rem;
+}
+.activity_list:last-of-type{
+    margin-right: 0;
+}
+.activity_list img{
+    width: 1.18rem;
+    height: 1.18rem;
+}
+.activity_name{
+    font-size: 0.22rem;
+    color: #2b2b2b;
+    text-align: center;
+    width: 100%;
+    margin-top: -0.3rem;
+}
+.activity_entra_box{
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    background: #ffffff;
+    background-image:-webkit-linear-gradient(top,#ffffff,#f4f4f4);
+    background-image:linear-gradient(top,#ffffff,#f4f4f4);
+    padding-top: 0.1rem;
+}
+.activity_entra{
+    width: 100%;
+    height: auto;
+    padding: 0rem 0.3rem 0.1rem;
+    box-sizing: border-box;
+}
+.activity_entra img{
+    width: 100%;
+    height: 1.61rem;
+}
+.task_content{
+    width: 100%;
+    height: auto;
+    background-color: #ffffff;
+    padding-top: 0.3rem;
+    box-sizing: border-box;
+}
+.task_content .box{
+    width: 100%;
+    height: 100%;
+}
+.every_task_box{
+    width: 6.9rem;
+    height: auto;
+    border: 0.02rem solid #f1f1f1;
+    border-radius: 0.2rem;
+    box-sizing: border-box;
+    margin: 0 auto;
+}
+.every_banner_img{
+    width: 6.9rem;
+    height: 2.4rem;
+    margin: 0.2rem auto;
+    display: block;
+}
+.new_people_icon{
+    width: 3.32rem;
+    height: 0.82rem;
+    position: absolute;
+    left: -0.1rem;
+    top: 0.3rem;
+}
+.new_people_icon img{
+    width: 100%;
+    height: 100%;
+}
+.new_people_icon span{
+    font-size: 0.2rem;
+    color: #e9c7ff;
+    position: absolute;
+    left: 1.9rem;
+    top: 0.25rem;
 }
