--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -29,6 +29,13 @@ body {
     overflow-y: scroll;
     font-family: Arial, Helvetica, sans-serif;
 }
+.main::-webkit-scrollbar {
+    display: none;
+    
+}
+.main::scrollbar {
+    display: none
+}
 :focus {
 	outline: 1;
 }
