--- a/src/components/explain/home/index.css
+++ b/src/components/explain/home/index.css
@@ -90,8 +90,8 @@
     margin-top: 0.06rem;
 }
 .money_icon{
-    width: 0.30rem;
-    height: 0.32rem;
+    width: 0.32rem;
+    height: 0.34rem;
     background: url("../../../../static/images/home/integral.png") center no-repeat;
     background-size: contain;
     margin-left: 0.1rem;
@@ -99,6 +99,12 @@
     vertical-align: middle;
     margin-top: -0.1rem;
    
+}
+.nodata_good{
+    font-size: 0.24rem;
+    color: #cccccc;
+    margin-top: 0.6rem;
+    text-align: center;
 }
 .my_info_right{
     position: absolute;
