--- a/src/components/explain/integralRecord/index.css
+++ b/src/components/explain/integralRecord/index.css
@@ -146,3 +146,9 @@
 .subtract{
     color: #ff4532;
 }
+.nodata{
+    font-size: 0.24rem;
+    text-align: center;
+    color: #333333;
+    margin-top: 2rem;
+}
