--- a/src/components/explain/addressManagement/index.css
+++ b/src/components/explain/addressManagement/index.css
@@ -136,3 +136,80 @@
     border-radius: 0.6rem;
     padding: 0.24rem 0; 
 }
+
+.content{
+        width: 6.9rem;
+        height: auto;
+        padding-left: 0.3rem;
+        box-sizing: border-box;
+        margin: 0.2rem auto 0;
+        background: #ffffff;
+        border-radius: 0.2rem;
+    }
+    .list{
+        width: 100%;
+        border-bottom: 1px solid #f1f1f1;
+        padding: 0.3rem 0;
+        font-size: 0.28rem;
+        color: #2b2b2b;
+        overflow: hidden;
+        position: relative;
+    }
+    .label_left{
+        width: 1.5rem;
+        float: left;
+    }
+    .label_right{
+        font-weight: bold;
+        float: left;
+        width: 4.8rem;
+    }
+    .list .label_right i{
+        width: 0.11rem;
+        height: 0.18rem;
+        background: url("../../../../static/images/buyGood/goin.png") center no-repeat;
+        background-size: contain;
+        position: absolute;
+        top: 0.4rem;
+        right: 0.3rem;
+    }
+    .list i{
+        width: 0.82rem;
+        height: 0.46rem;
+        background: url("../../../../static/images/address/close.png") center no-repeat;
+        background-size: contain;
+        position: absolute;
+        top: 0.27rem;
+        right: 0.3rem;
+    }
+    .list i.open{
+        background: url("../../../../static/images/address/open.png") center no-repeat;
+        background-size: contain;
+    }
+    .btn{
+        width: 5.8rem;
+        background: #ff4532;
+        font-size: 0.32rem;
+        text-align: center;
+        color: #ffffff;
+        border-radius: 0.6rem;
+        padding: 0.34rem 0; 
+        /* position: absolute;
+        bottom: 1.8rem;
+        left: 50%;
+        margin-left: -2.9rem; */
+    }
+    .address_detail{
+        width: 100%;
+        height: 100%;
+        margin-top: -0.05rem;
+        font-size: 0.28rem;
+        color: #2b2b2b;
+        font-weight: bold;
+    }
+    input::placeholder{
+        color: #cccccc;
+    }
+    .addressColor{
+        color: #cccccc;
+    }
