--- a/src/components/explain/taskWall/index.css
+++ b/src/components/explain/taskWall/index.css
@@ -203,11 +203,11 @@
     text-align: center;
     font-weight: bold;
 }
-.task_btn_finish{
+.task_btn_resive{
     background: url("../../../../static/images/taskWall/finish.png") center no-repeat;
     background-size: contain;
 }
-.task_btn_resive{
+.task_btn_finish{
     background: url("../../../../static/images/taskWall/resive.png") center no-repeat;
     background-size: contain;
 }
@@ -520,6 +520,12 @@
     border-radius: 0.2rem;
     box-sizing: border-box;
     margin: 0 auto;
+}
+.nodata{
+    font-size:0.24rem;
+    color: #cccccc;
+    text-align: center;
+    margin-top: 0.5rem;
 }
 .every_banner_img{
     width: 6.9rem;
