--- a/src/components/explain/goodDetail/index.css
+++ b/src/components/explain/goodDetail/index.css
@@ -16,6 +16,9 @@
     background: #ffffff;
     border-bottom: 1px solid #f1f1f1;
 }
+.good_source{
+    margin-top: 0.45rem;
+}
 .top_close{
     width: 0.16rem;
     height: 0.28rem;
