--- a/src/components/explain/home/index.css
+++ b/src/components/explain/home/index.css
@@ -165,6 +165,9 @@
     height: 1.8rem;
     overflow: hidden;
 }
+.good_source{
+    margin-top: 0.25rem;
+}
 .activity_scoll{
     width: 100%;
     height: 2rem;
