--- a/src/components/explain/buyGood/index.css
+++ b/src/components/explain/buyGood/index.css
@@ -136,7 +136,7 @@
     margin-right: 0.1rem;
     display: inline-block;
     vertical-align: top;
-   
+   margin-top: -0.05rem;
 }
 .order_money_box{
     margin-top: 0.2rem;
@@ -158,7 +158,7 @@
 .nums{
     display: inline-block;
     width: 1.64rem;
-    height: 0.4rem;
+    height: 0.45rem;
     position: relative;
     margin-left: 0.2rem;
     vertical-align: middle;
@@ -361,4 +361,7 @@
     width: 1rem;
     height: 100%;
     float: right;
+}
+.is_jf{
+    margin-top: 0.45rem;
 }
