--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -120,6 +120,10 @@ ul,li{
     min-height:100vh;
     display:flex;
     flex-direction: column;
+    -webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
+    overflow-y: scroll;
+    overflow-x: hidden; overflow-y: auto;
 }
 .content{
     flex:1;
