--- a/src/components/explain/read/index.css
+++ b/src/components/explain/read/index.css
@@ -190,6 +190,10 @@ ul li:last-of-type{
 .reading_content{
     font-size: 0.26rem;
     color: #2b2b2b;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 3rem;
 }
 .reading_time{
     font-size: 0.26rem;
@@ -205,7 +209,7 @@ ul li:last-of-type{
     padding: 0.12rem 0;
     color: #ffffff;
     position: absolute;
-    bottom: 0.3rem;
+    bottom: 0.5rem;
     right: 0.2rem;
     background-color: #ff4532;
     text-align: center;
