--- a/src/components/explain/buyGood/index.css
+++ b/src/components/explain/buyGood/index.css
@@ -95,7 +95,7 @@
 .order_info_box{
     width: 100%;
     margin-top: 0.2rem;
-    border-bottom: 1px solid #f1f1f1;
+    /* border-bottom: 1px solid #f1f1f1; */
     overflow: hidden;
     position: relative;
 }
@@ -141,6 +141,8 @@
 .order_money_box{
     margin-top: 0.2rem;
     width: 100%;
+    padding-top: 0.2rem;
+    box-sizing: border-box;
 }
 .order_money{
     width: 100%;
@@ -364,4 +366,33 @@
 }
 .is_jf{
     margin-top: 0.45rem;
+}
+.mask .mask_main_good{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.mask .mask_main_good .box{
+	width: 5.2rem;
+	height: 5.4rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -2.7rem;
+    background: #ffffff;
+    border-radius: 0.2rem;
+    padding-top:0.8rem;
+    box-sizing: border-box;
+}
+.mask_wx_code{
+    width: 2.9rem;
+    height: 2.9rem;
+    display: block;
+    margin: 0rem auto 0;
 }
