--- a/src/components/explain/goodDetail/index.css
+++ b/src/components/explain/goodDetail/index.css
@@ -134,10 +134,11 @@
     margin-right: 0.3rem;
     height: auto;
     box-sizing: border-box;
+    padding-bottom: 1.3rem;
 }
 .btn{
     width: 5.8rem;
-    margin: 0.4rem auto;
+    margin: 0.1rem auto;
     background: #ff4532;
     font-size: 0.32rem;
     text-align: center;
@@ -145,7 +146,7 @@
     border-radius: 0.6rem;
     padding: 0.34rem 0; 
     position: fixed;
-    bottom: 0.5rem;
+    bottom: 0rem;
     left: 50%;
     margin-left: -2.9rem;
 }
@@ -224,4 +225,56 @@
     font-size: 0.28rem;
     color: #ffffff;
     padding: 0.26rem 0;
+}
+.mask .file .box{
+	width: 5.2rem;
+	height: 5.18rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -2.59rem;
+    background: #927676;
+    border-radius: 0.2rem;
+    padding-top: 2.1rem;
+    box-sizing: border-box;
+    background: url("../../../../static/images/buyGood/file_bg.png") center no-repeat;
+    background-size: contain;
+}
+.file_title{
+    font-size: 0.36rem;
+    color: #2b2b2b;
+    text-align: center;
+    font-weight: bold;
+}
+.file_need{
+    font-size: 0.24rem;
+    color: #2b2b2b;
+    text-align: center;
+    margin-top: 0.3rem;
+}
+.file_you{
+    font-size: 0.24rem;
+    color: #2b2b2b;
+    text-align: center;
+    margin-top: 0.02rem;
+}
+.file_btn{
+    width: 3rem;
+    background:#ff4532;
+    text-align: center;
+    border-radius: 0.5rem;
+    margin: 0.5rem auto 0;
+    font-size: 0.28rem;
+    color: #ffffff;
+    padding: 0.26rem 0;
+}
+.file_close{
+    width: 0.4rem;
+    height: 0.4rem;
+    background: url("../../../../static/images/buyGood/close_mask.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0.1rem;
+    right: 0.1rem;
 }
