--- a/src/components/explain/home/index.css
+++ b/src/components/explain/home/index.css
@@ -332,7 +332,8 @@
     float: left;
     margin-right: 0.2rem;
     width: 3.35rem;
-    height: 4.7rem;
+    /* height: 4.7rem; */
+    height: 4.3rem;
     position: relative;
     margin-bottom: 0.2rem;
     border-radius: 0.1rem;
@@ -395,13 +396,16 @@
 }
 .goods_now_price{
     font-size: 0.2rem;
-    margin-left: 0.2rem;
+    /* margin-left: 0.2rem; */
     font-weight: bold;
     color: #ee4532;
-    position: relative;
+    /* position: relative;
     position: absolute;
     left: 0;
-    bottom: 0.68rem;
+    bottom: 0.68rem; */
+    width: 100%;
+    text-align: center;
+    margin-top: 0.1rem;
 }
 .goods_now_price span{
     font-size: 0.28rem;
