--- a/src/components/explain/taskWall/index.css
+++ b/src/components/explain/taskWall/index.css
@@ -554,3 +554,32 @@
 .every_sigin .task_info{
     margin-top:0.15rem;
 }
+.mask .mask_main_good{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.mask .mask_main_good .box{
+	width: 5.2rem;
+	height: 5.4rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -2.7rem;
+    background: #ffffff;
+    border-radius: 0.2rem;
+    padding-top:0.8rem;
+    box-sizing: border-box;
+}
+.mask_wx_code{
+    width: 2.9rem;
+    height: 2.9rem;
+    display: block;
+    margin: 0rem auto 0;
+}
