--- a/src/components/explain/addressManagement/index.css
+++ b/src/components/explain/addressManagement/index.css
@@ -54,6 +54,7 @@
     padding: 0.3rem 0 0.2rem 0.3rem;
     box-sizing: border-box;
     border-radius: 0.2rem;
+    border: 1px solid #ffffff;
 }
 .address_xl{
     font-size: 0.28rem;
@@ -212,4 +213,7 @@
     }
     .addressColor{
         color: #cccccc;
+    }
+    .check_address{
+        border: 1px solid red;
     }
