--- a/src/components/explain/goodDetail/index.css
+++ b/src/components/explain/goodDetail/index.css
@@ -50,12 +50,15 @@
 }
 .good_info_box{
     width: 100%;
-    height: 1.3rem;
+    height: 3.07rem;
     background: url("../../../../static/images/goodDetail/good_info_bg.png") center no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     overflow: hidden;
     /* padding-left: 0.3rem; */
     box-sizing: border-box;
+}
+.good_info_box_self{
+    height: auto;
 }
 .good_price_part{
     float: left;
@@ -70,6 +73,7 @@
 .price_result{
     font-size: 0.26rem;
     color: #ffffff;
+    margin-top: 0.4rem;
 }
 .price_result span{
     font-size: 0.4rem;
@@ -87,31 +91,51 @@
     margin-top: 0.05rem;
 }
 .ex_people_nums{
-    width: 2.2rem;
-    height: 0.5rem;
+    width: 2rem;
+    height: 1.1rem;
     background: url("../../../../static/images/goodDetail/ex_people_nums.png") center no-repeat;
     background-size: contain;
     float: right;
-    margin-right: 0.3rem;
-    margin-top: 0.4rem;
+    margin-right: 0.1rem;
+    margin-top: 0.1rem;
     position: relative;
 }
 .ex_people_nums div{
-    width: 1.67rem;
+    width: 2rem;
     position: absolute;
     top: 0;
-    right: 0.03rem;
-    font-size: 0.26rem;
+    right: 0rem;
+    font-size: 0.32rem;
     color: #b67b4c;
     text-align: center;
-    padding: 0.07rem 0;
+    padding: 0.34rem 0;
+}
+.good_info_tl{
+    width: 7.3rem;
+    height: 1.68rem;
+    position: relative;
+    background: #ffffff;
+    margin: 0.1rem auto;
+    border-radius: 0.2rem;
+    padding-top: 0.1rem;
+    box-sizing: border-box;
 }
 .good_name{
     font-size: 0.32rem;
     color: #2b2b2b;
     font-weight: bold;
     margin-left: 0.3rem;
-    margin-top: 0.3rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-clamp: 2;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
 }
 .good_good{
     font-size: 0.24rem;
@@ -130,25 +154,62 @@
     font-size: 0.24rem;
     color: #8e8e8e;
     margin-top: 0.15rem;
-    margin-left: 0.3rem;
-    margin-right: 0.3rem;
+    /* margin-left: 0.3rem;
+    margin-right: 0.3rem; */
     height: auto;
     box-sizing: border-box;
-    padding-bottom: 1.3rem;
+    background-color: #ffffff;
+    padding: 0.2rem 0.3rem 0.2rem;
+    margin-bottom: 1.68rem;
+}
+.exchange_info{
+    width: 100%;
+    height: auto;
+    margin: 0.2rem auto;
+    background: #ffffff;
+    padding: 0.35rem 0.3rem 0.3rem;
+}
+.exchange_info ul li{
+    font-size: 0.24rem;
+    color: #a8a8a8;
+    line-height: 0.4rem;
+}
+.exchange_info ul li span{
+    width: 5px;
+    height: 5px;
+    border: 2px solid red;
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block;
+    margin-right: 0.1rem;
+}
+.good_info_tl_self{
+    height: auto;
+    padding: 0.2rem 0;
+}
+.exchange_info p{
+    font-size: 0.28rem;
+    color: #2b2b2b;
+    font-weight: bold;
+    margin-bottom: 0.15rem;
+}
+.good_detail_footer{
+    width: 100%;
+    height: 1.48rem;
+    background: #ffffff;
+    position: fixed;
+    bottom: 0rem;
+    left: 0;
 }
 .btn{
     width: 5.8rem;
-    margin: 0.1rem auto;
     background: #ff4532;
     font-size: 0.32rem;
     text-align: center;
     color: #ffffff;
     border-radius: 0.6rem;
     padding: 0.34rem 0; 
-    position: fixed;
-    bottom: 0rem;
-    left: 50%;
-    margin-left: -2.9rem;
+    margin: 0.2rem auto;
 }
 .no_bg{
     background-image: none;
@@ -162,6 +223,9 @@
     font-size: 0.44rem;
     font-weight: bold;
     text-indent: 0.2rem;
+    position: absolute;
+    bottom: 0.15rem;
+    left: 0;
 }
 .p_q span{
     font-size: 0.26rem;
@@ -172,6 +236,7 @@
     font-size: 0.26rem;
     color: #8e8e8e;
     margin-left: 0.1rem;
+    
 }
 .get_q{
     font-size: 0.3rem;
