--- a/src/components/explain/luckDraw/index.css
+++ b/src/components/explain/luckDraw/index.css
@@ -490,3 +490,57 @@
 .no_remal_name{
     margin-top: 0.25rem;
 }
+.integral_record_intru{
+    width: 0.74rem;
+    height: 1.04rem;
+    position: absolute;
+    top: 0.3rem;
+    right: 0rem;
+    background: url("../../../../static/images/luckDraw/icon.png") center no-repeat;
+    background-size: contain;
+}
+.mask .mask_main_good{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.6);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.mask .mask_main_good .box{
+	width: 5.2rem;
+	height: 5.4rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -2.7rem;
+    background: #ffffff;
+    border-radius: 0.2rem;
+    padding-top:0.8rem;
+    box-sizing: border-box;
+}
+.mask_wx_code{
+    width: 2.9rem;
+    height: 2.9rem;
+    display: block;
+    margin: 0rem auto 0;
+}
+.exchange_show_text{
+    font-size: 0.24rem;
+    color: #333333;
+    text-align: center;
+    margin-top: 0.25rem;
+}
+.success_btn{
+    width: 3rem;
+    background:#ff4532;
+    text-align: center;
+    border-radius: 0.5rem;
+    margin: 0.6rem auto 0;
+    font-size: 0.28rem;
+    color: #ffffff;
+    padding: 0.26rem 0;
+}
