--- a/src/components/explain/prizeList/index.css
+++ b/src/components/explain/prizeList/index.css
@@ -1,20 +1,15 @@
 .main{
     width: 100%;
-    height:100%;
+    
     position: absolute;
     top: 0;
     left: 0;
-    background-color:#f4f4f4;
-    padding-top: 2.12rem;
-    box-sizing: border-box;
+    
+    overflow: hidden;
 }
 .header_part{
     width: 100%;
     height: 2.12rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
 }
 .top{
     width: 100%;
@@ -95,7 +90,7 @@
     margin-top: 0.06rem;
 }
 .money_icon{
-    width: 0.30rem;
+    width: 0.34rem;
     height: 0.32rem;
     background: url("../../../../static/images/home/integral.png") center no-repeat;
     background-size: contain;
@@ -136,108 +131,118 @@
     background-size: contain;
     float: left;
 }
-.content{
-    width: 100%;
-    height: auto;
-    padding:0 0.3rem;
+.c_t{
+    width: 7.3rem;
+    height: 0.3rem;
+    background: url("../../../../static/images/luckDraw/c_t.png") center no-repeat;
+    background-size: contain;
+    margin: 0.3rem auto;
+}
+.list_box{
+    width: 6.9rem;
+    height: 78%;
+    position: absolute;
+    top: 2.6rem;
+    left: 0.3rem;
+    background: #ffffff;
+    padding-left: 0.3rem;
     box-sizing: border-box;
-}
-.intru{
-    width: 100%;
-    height: auto;
-    background: #929292;
-    border-radius: 0.1rem;
-    padding: 0.13rem 0;
-    text-align: center;
-    font-size: 0.26rem;
-    color: #ffffff;
-    margin-top: 0.2rem;
-}
-.intru span{
-    color: #fff494;
 }
 ul{
+    margin-top: 0.35rem;
     width: 100%;
-    height: auto;
-    background: #ffffff;
-    border-radius: 0.1rem;
-    padding: 0 0.3rem;
-    box-sizing: border-box;
-    margin: 0.2rem auto;
 }
 ul li{
-    width: 100%;
-    height: 1.2rem;
-    padding: 0.2rem 0;
+    
+    height: 0.8rem;
+    padding: 0.3rem;
     border-bottom: 1px solid #f1f1f1;
+    overflow: hidden;
     position: relative;
 }
-ul li:last-of-type{
-    border: 0;
-}
-.read_img{
+li img{
+    width: 0.8rem;
+    height: 0.8rem;
+    overflow: hidden;
+    margin-right: 0.2rem;
     display: block;
     float: left;
-    width: 1.2rem;
-    height: 1.2rem;
-    border-radius: 0.1rem;
+    border-radius: 0.2rem;
 }
-.reading{
+li .info{
     float: left;
-    margin-left: 0.2rem;
-    width: 4.85rem;
 }
-.reading_content{
-    font-size: 0.26rem;
+li .info .name{
+    font-size: 0.28rem;
+    font-weight: bold;
     color: #2b2b2b;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    line-clamp: 2;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    box-orient: vertical;
-    
 }
-.reading_time{
-    font-size: 0.26rem;
+li .info .time{
+    font-size: 0.28rem;
+    font-weight: bold;
     color: #8e8e8e;
-    position: absolute;
-    bottom: 0.2rem;
-    left: 1.4rem;
+    margin-top: 0.1rem;
 }
-.go_read{
-    width: 1.6rem;
-    height: auto;
-    font-size: 0.26rem;
-    padding: 0.12rem 0;
-    color: #ffffff;
-    position: absolute;
-    bottom: 0.15rem;
-    right: 0.2rem;
-    background-color: #ff4532;
-    text-align: center;
+.tal{
+    width: 1.46rem;
+    
+    border: 1px solid #2b2b2b;
     border-radius: 0.3rem;
-}
-.go_readed{
-    width: 1.6rem;
-    height: auto;
-    font-size: 0.26rem;
-    padding: 0.12rem 0;
-    color: #ffffff;
-    position: absolute;
-    bottom: 0.3rem;
-    right: 0.2rem;
-    background-color: #cccccc;
+    font-size: 0.24rem;
+    color: #2b2b2b;
     text-align: center;
-    border-radius: 0.3rem;
+    padding: 0.1rem 0;
+    box-sizing: border-box;
+    margin-top: 0.05rem;
+    float: right;
 }
-.is_finish{
-    width: 1.03rem;
-    height: 1.01rem;
-    background: url("../../../../static/images/home/is_read_finish.png") center no-repeat;
+.nodata{
+    font-size: 0.26rem;
+    color: #cccccc;
+    text-align: center;
+    margin-top: 1rem;
+}
+.mask .mask_main_good{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.6);
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1010;
+}
+.mask .mask_main_good .box{
+	width: 5.2rem;
+	height: 5.4rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -2.7rem;
+    background: #ffffff;
+    border-radius: 0.2rem;
+    padding-top:0.8rem;
+    box-sizing: border-box;
+}
+.mask_wx_code{
+    width: 2.9rem;
+    height: 2.9rem;
+    display: block;
+    margin: 0rem auto 0;
+}
+.exchange_show_text{
+    font-size: 0.24rem;
+    color: #333333;
+    text-align: center;
+    margin-top: 0.25rem;
+}
+.file_close{
+    width: 0.4rem;
+    height: 0.4rem;
+    background: url("../../../../static/images/buyGood/close_mask.png") center no-repeat;
     background-size: contain;
     position: absolute;
-    bottom: 0rem;
-    right: -0.3rem;
+    top: 0.1rem;
+    right: 0.1rem;
 }
