--- a/src/components/explain/signIn/index.css
+++ b/src/components/explain/signIn/index.css
@@ -349,6 +349,15 @@ ul li:last-of-type{
     background: url("../../../../static/images/sign/love_active.png") center no-repeat;
     background-size: contain;
 }
+.integral_record_intru{
+    width: 0.74rem;
+    height: 1.04rem;
+    position: absolute;
+    top: 0.3rem;
+    right: 0rem;
+    background: url("../../../../static/images/sign/sign_desc.png") center no-repeat;
+    background-size: contain;
+}
 .mask .mask_main{
 	width: 100%;
 	height: 100%;
@@ -405,4 +414,35 @@ ul li:last-of-type{
     position: absolute;
     bottom: 2.2rem;
     left:0;
+}
+.sigin_info{
+    width: 5.2rem;
+	height: 8rem;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -2.6rem;
+	margin-top: -4rem;
+    background: #ffffff;
+    border-radius: 0.2rem;
+    box-sizing: border-box;
+    padding: 0.5rem 0.3rem 0;
+}
+.file_close{
+    width: 0.4rem;
+    height: 0.4rem;
+    background: url("../../../../static/images/buyGood/close_mask.png") center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0.1rem;
+    right: 0.1rem;
+}
+h6{
+    text-align: center;
+    font-size: 0.3rem;
+    margin-bottom: 0.2rem;
+}
+.sigin_desc{
+    font-size: 0.24rem;
+    line-height: 0.4rem;
 }
