--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -128,6 +128,9 @@ ul,li{
 .content{
     flex:1;
     -webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
+    overflow-y: scroll;
+    overflow-x: hidden; overflow-y: auto;
 }
 .header_part{
     width: 100%;
