--- a/src/components/explain/taskWall/index.css
+++ b/src/components/explain/taskWall/index.css
@@ -241,7 +241,7 @@
     float: left;
     font-size: 0.36rem;
     color: #ffffff;
-    background: #ff4532;
+    background: #ff754b;
     text-align: center;
     font-weight: bold;
     padding: 0.2rem 0;
