--- a/src/components/explain/luckDraw/index.css
+++ b/src/components/explain/luckDraw/index.css
@@ -219,6 +219,8 @@
     height: 1.2rem;
     margin: 0.1rem auto 0;
     display: block;
+    border-radius: 0.1rem;
+    overflow: hidden;
 }
 .prize_name{
     width: 1.7rem;
